[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passwd-generator"
version = "2026.1.0"
description = "Simple Python library to generate, hash, and verify secure passwords with modern crack time analysis"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Areo", email = "areo@envyre.de"}]
license = {text = "MIT"}
keywords = ["password", "hash", "validation", "sha256", "generate"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/Areoxy/passwd-generator"
Repository = "https://github.com/Areoxy/passwd-generator"
"Bug Tracker" = "https://github.com/Areoxy/passwd-generator/issues"


[tool.hatch.build.targets.wheel]
packages = ["src/passwd_generator"]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = "src"
addopts = "-v"
